--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ border-top:1px solid #222;
 <p>Version: v2.1.0</p>
 <p>Size: 24 MB</p>
 <p>Updated: Feb 2026</p>
-<a href="YOUR_APK_LINK_HERE" class="btn">Download Now</a>
+<a href="https://www.mediafire.com/file/bl5esdt14n08q0b/FFEsportsBD.apk/file" class="btn">Download Now</a>
 </div>
 
 <!-- FEATURES -->
